[project]
name = "end-to-end-blog-generation-agentic-ai-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.121.3",
    "langchain>=1.0.8",
    "langchain-cli[inem]>=0.0.37",
    "langchain-community>=0.4.1",
    "langchain-core>=1.1.0",
    "langchain-groq>=1.0.1",
    "langgraph>=1.0.3",
    "uvicorn>=0.38.0",
    "watchdog>=6.0.0",
]
